unpackaged/main/default/objects/EventApi__Event__c/EventApi__Event__c.object-meta.xml
<CustomObject>
    <description>Primary configuration object for all events.</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>