unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Agenda_HTML__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Agenda_HTML__c</fullName>
    <description>Text appears at the top of the &quot;Agenda&quot; page.</description>
    <inlineHelpText>Text appears at the top of the &quot;Agenda&quot; page.</inlineHelpText>
    <label>Agenda HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>