unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Agenda_Instructions_HTML__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Agenda_Instructions_HTML__c</fullName>
    <description>The text that appears at the top of the &quot;Agenda&quot; page during registration.</description>
    <inlineHelpText>The text that appears at the top of the &quot;Agenda&quot; page during registration.</inlineHelpText>
    <label>Agenda Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>