unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Attendee_Modal_Instructions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee_Modal_Instructions__c</fullName>
    <description>This text displays as instructions in the attendee modal.</description>
    <inlineHelpText>This text displays as instructions in the attendee modal.</inlineHelpText>
    <label>Attendee Modal Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>