unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Attendee_Selection_Instructions_HTML__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee_Selection_Instructions_HTML__c</fullName>
    <description>The text that at the top of the &quot;Attendee Selection&quot; page during registration.</description>
    <inlineHelpText>The text that appears at the top of the &quot;Attendee Selection&quot; page during registration.</inlineHelpText>
    <label>Attendee Selection Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>