unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Attendees__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated ** The current number of registered attendees for your event.</description>
    <inlineHelpText>** System Calculated ** The current number of registered attendees for your event.</inlineHelpText>
    <label>Number of Registered Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>