unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Auto_Sellout_Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Auto_Sellout_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, system will update Sold Out field automatically when number of registered attendees have reached to event capacity.</description>
    <inlineHelpText>When checked, system will update Sold Out field automatically when number of registered attendees have reached to event capacity.</inlineHelpText>
    <label>Auto Sellout Event</label>
    <type>Checkbox</type>
</CustomField>