unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Body_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Body_Background_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>The overall background of the related event. Valid hexadecimal notation required.</description>
    <inlineHelpText>The overall background of the related event. Valid hexadecimal notation required.</inlineHelpText>
    <label>Body Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>