unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Calendar_Reminder_Text__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Calendar_Reminder_Text__c</fullName>
    <description>Replaces Event: Description. When the customer clicks an &quot;Add to Calendar&quot; link on the event, this text is the body of the calendar item. By default, the Event Name, Start Time, End Time, and Venue information are included.</description>
    <inlineHelpText>Replaces Event: Description. When the customer clicks an &quot;Add to Calendar&quot; link on the event, this text is the body of the calendar item. By default, the Event Name, Start Time, End Time, and Venue information are included.</inlineHelpText>
    <label>Calendar Reminder Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>