unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Capacity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlisting&quot; is checked.</description>
    <inlineHelpText>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlisting&quot; is checked.</inlineHelpText>
    <label>Ticket Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>