unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Chatter_Group_Ids__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Chatter_Group_Ids__c</fullName>
    <description>This field defines the chatter group ids that can view this event in the community.</description>
    <inlineHelpText>This field defines the chatter group ids that can view this event in the community.</inlineHelpText>
    <label>Chatter Group Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>