unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Community_Group__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Community_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Community group that this event is linked to. The event will display on the group detail page.</description>
    <inlineHelpText>Community group that this event is linked to. The event will display on the group detail page.</inlineHelpText>
    <label>Community Group</label>
    <referenceTo>PagesApi__Community_Group__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>