unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Contact_Search_Result_Fields_CSV__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Search_Result_Fields_CSV__c</fullName>
    <description>Result fields will be displayed when contact searching for attendees.</description>
    <inlineHelpText>Result fields will be displayed when contact searching for attendees.</inlineHelpText>
    <label>Contact Search Result Fields CSV</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>