unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Create_Contacts_for_Attendees__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Create_Contacts_for_Attendees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables contact creation for that event. If &quot;Enable Account Search&quot; is not checked, contacts created will be added to the primary registrant&#39;s account or into an individual person account depending on if the &quot;Enable Individual Accounts&quot; setting is active.</description>
    <inlineHelpText>Enables contact creation for that event. If &quot;Enable Account Search&quot; is not checked, contacts created will be added to the primary registrant&#39;s account or into an individual person account depending on if the &quot;Enable Individual Accounts&quot; setting is active.</inlineHelpText>
    <label>Create Contacts for Attendees</label>
    <type>Checkbox</type>
</CustomField>