unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Custom_CSS__c</fullName>
    <description>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</description>
    <inlineHelpText>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</inlineHelpText>
    <label>Custom CSS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>