unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Disable_Attendee_Assignment__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Disable_Attendee_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this field, the user will bypass the need to insert attendee names. This means all attendee records will have the name of the purchaser.</description>
    <inlineHelpText>By checking this field, the user will bypass the need to insert attendee names. This means all attendee records will have the name of the purchaser.</inlineHelpText>
    <label>Disable Attendee Assignment</label>
    <type>Checkbox</type>
</CustomField>