unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Disable_Guest_Checkout__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Disable_Guest_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, only authenticated users will be able to register for the event.</description>
    <inlineHelpText>When checked, only authenticated users will be able to register for the event.</inlineHelpText>
    <label>Disable Guest Checkout</label>
    <type>Checkbox</type>
</CustomField>