unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Disable_Login__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Disable_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, only guest registration is available for the event. User will not be able to log in during the registration flow.</description>
    <inlineHelpText>When checked, only guest registration is available for the event. User will not be able to log in during the registration flow.</inlineHelpText>
    <label>Disable Login</label>
    <type>Checkbox</type>
</CustomField>