unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Name__c</fullName>
    <description>Event name as you would like it to appear on registration pages, calendar reminders, and emails.</description>
    <inlineHelpText>Event name as you would like it to appear on registration pages, calendar reminders, and emails.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>