unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Assigned_Seating__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Assigned_Seating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, assigned seating is enabled on the related event.</description>
    <inlineHelpText>When checked, assigned seating is enabled on the related event.</inlineHelpText>
    <label>Enable Assigned Seating</label>
    <type>Checkbox</type>
</CustomField>