unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Contact_Restriction__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Contact_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a contact cannot have more than one attendee under the event. This will restrict the contact to one registrant for the event.</description>
    <inlineHelpText>When checked, a contact cannot have more than one attendee under the event. This will restrict the contact to one registrant for the event.</inlineHelpText>
    <label>Enable Contact Restriction</label>
    <type>Checkbox</type>
</CustomField>