unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Contact_Search__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Contact_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, enables the primary registrant to search for contacts in the system. When unchecked, the primary registrant is not allowed to search for any contacts. The default behavior is to search within the primary registrant&#39;s account.</description>
    <inlineHelpText>When checked, enables the primary registrant to search for contacts in the system. When unchecked, the primary registrant is not allowed to search for any contacts. The default behavior is to search within the primary registrant&#39;s account.</inlineHelpText>
    <label>Enable Contact Search</label>
    <type>Checkbox</type>
</CustomField>