unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Event_Display_Name_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Event_Display_Name_Date_Time__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, the Display name and event date and time will not display over the banner image. Defaults checked.</description>
    <inlineHelpText>When unchecked, the Display name and event date and time will not display over the banner image. Defaults checked.</inlineHelpText>
    <label>Enable Event Display Name and Date/Time</label>
    <type>Checkbox</type>
</CustomField>