unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_QR_Event_Pass__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_QR_Event_Pass__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this field will show a QR code on the event pass.</description>
    <inlineHelpText>Checking this field will show a QR code on the event pass.</inlineHelpText>
    <label>Enable QR for Event Pass</label>
    <type>Checkbox</type>
</CustomField>