unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Registration_Groups__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Registration_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, allows one person to register multiple attendees at the same time and pay for them together.</description>
    <inlineHelpText>When checked, allows one person to register multiple attendees at the same time and pay for them together.</inlineHelpText>
    <label>Enable Registration Groups</label>
    <type>Checkbox</type>
</CustomField>