unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Registration_Updates__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Registration_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow attendees to update their registration from a portal. Defaults unchecked.</description>
    <inlineHelpText>Allow attendees to update their registration from a portal. Defaults unchecked.</inlineHelpText>
    <label>Enable Registration Updates</label>
    <type>Checkbox</type>
</CustomField>