unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Enable_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Sponsors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, enables sponsor package sales for event Registration Styles that support it.</description>
    <inlineHelpText>When checked, enables sponsor package sales for event Registration Styles that support it.</inlineHelpText>
    <label>Enable Sponsor Sales</label>
    <type>Checkbox</type>
</CustomField>