unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__End_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__End_Time__c</fullName>
    <description>**Required** The event end time (HH:MM).</description>
    <inlineHelpText>**Required** The event end time (HH:MM).</inlineHelpText>
    <label>End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>