unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__ETicket_Label_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__ETicket_Label_Color__c</fullName>
    <description>The color of the text for the mobile e-ticket. This color will be used for the headings in each section of the e-ticket. Required format is #000000.</description>
    <inlineHelpText>The color of the text for the mobile e-ticket. This color will be used for the headings in each section of the e-ticket. Required format is #000000.</inlineHelpText>
    <label>ETicket Label Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>