unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__ETicket_Value_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__ETicket_Value_Color__c</fullName>
    <description>The color of the value fields for the mobile e-ticket. This color will be used for the values in each section of the e-ticket. Required format is #000000.</description>
    <inlineHelpText>The color of the value fields for the mobile e-ticket. This color will be used for the values in each section of the e-ticket. Required format is #000000.</inlineHelpText>
    <label>ETicket Value Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>