unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Event_Capacity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Capacity_Remaining__c</fullName>
    <description>Total Event Capacity minus Number of register attendees.</description>
    <formula>EventApi__Total_Event_Capacity__c  -  EventApi__Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Event Capacity minus Number of register attendees.</inlineHelpText>
    <label>Event Capacity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>