unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Event_Category__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event category is a template for creating events that use the same information. Defined fields on the event category will pass down to the event and can be customized as needed.</description>
    <inlineHelpText>The event category is a template for creating events that use the same information. Defined fields on the event category will pass down to the event and can be customized as needed.</inlineHelpText>
    <label>Event Category</label>
    <referenceTo>EventApi__Event_Category__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>