unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Event_Key__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Key__c</fullName>
    <description>This field is used as a unique identifier for events. The value in this field will also be used to concatenate item class names to be easily identified in lookup searches.</description>
    <inlineHelpText>This field is used as a unique identifier for events. The value in this field will also be used to concatenate item class names to be easily identified in lookup searches.</inlineHelpText>
    <label>Event Key</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>