unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Event_Pass_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Pass_Image_URL__c</fullName>
    <description>URL for the image to display on the printable event pass.</description>
    <inlineHelpText>URL for the image to display on the printable event pass.</inlineHelpText>
    <label>Event Pass Image URL</label>
    <type>Url</type>
</CustomField>