unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Featured_Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Featured_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this event&#39;s banner will display in the featured events section of the events listing page. If the event does not have a banner image, it cannot be a featured event.</description>
    <inlineHelpText>When checked this event&#39;s banner will display in the featured events section of the events listing page. If the event does not have a banner image, it cannot be a featured event.</inlineHelpText>
    <label>Featured Event</label>
    <type>Checkbox</type>
</CustomField>