unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Form__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Purchaser Form is only displayed for the purchasing/primary attendee.</description>
    <inlineHelpText>** Conditionally Required ** Link to the Survey Form built using Fonteva&#39;s Publisher. Required and restricted to Events where &quot;Enable Surveys&quot; is checked.</inlineHelpText>
    <label>Purchaser Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>