unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Free_Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Free_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, all items attached to this event will be free. Any prices for tickets and sessions will be ignored.</description>
    <inlineHelpText>When checked, all items attached to this event will be free. Any prices for tickets and sessions will be ignored.</inlineHelpText>
    <label>Free Event</label>
    <type>Checkbox</type>
</CustomField>