unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Group_Manager_HTML__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Group_Manager_HTML__c</fullName>
    <description>The text that appears at the top of the &quot;Group Registration&quot; page.</description>
    <inlineHelpText>Text appears at the top of the &quot;Group Registration&quot; page.</inlineHelpText>
    <label>Group Manager HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>