unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Guest_Email_Optional__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Guest_Email_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, guest attendees will not need an email to register.</description>
    <inlineHelpText>When checked, guest attendees will not need an email to register.</inlineHelpText>
    <label>Guest Email Optional</label>
    <type>Checkbox</type>
</CustomField>