unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Guest_Registrant_FieldSet_CSV__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Guest_Registrant_FieldSet_CSV__c</fullName>
    <description>Custom fieldset defined on the Assignment Object that is used to collect information during guest checkout. Use the API name of the fieldset and ensure that fields on the Assignment object mirror the fields on the Attendee object.</description>
    <inlineHelpText>Custom fieldset defined on the Assignment Object that is used to collect information during guest checkout. Use the API name of the fieldset and ensure that fields on the Assignment object mirror the fields on the Attendee object.</inlineHelpText>
    <label>Guest Registrant Field Sets (CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>