unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Heading_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Heading_Color__c</fullName>
    <defaultValue>&quot;#333333&quot;</defaultValue>
    <description>Color of all heading text in the related event. Valid hexadecimal notation required.</description>
    <inlineHelpText>Color of all heading text in the related event. Valid hexadecimal notation required.</inlineHelpText>
    <label>Heading Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>