unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Hero_Button_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hero_Button_Background_Color__c</fullName>
    <defaultValue>&quot;#00AAFF&quot;</defaultValue>
    <description>Background color of the related event&#39;s banner button. Valid hexadecimal notation required.</description>
    <inlineHelpText>Background color of the related event&#39;s banner button. Valid hexadecimal notation required.</inlineHelpText>
    <label>Hero Button Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>