unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Hero_Button_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hero_Button_Text_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Text color of the related event&#39;s banner button. Valid hexadecimal notation required.</description>
    <inlineHelpText>Text color of the related event&#39;s banner button. Valid hexadecimal notation required.</inlineHelpText>
    <label>Hero Button Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>