unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Hero_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hero_Text_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Color used for the related event&#39;s banner text. Valid hexadecimal notation required.</description>
    <inlineHelpText>Color used for the related event&#39;s banner text. Valid hexadecimal notation required.</inlineHelpText>
    <label>Hero Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>