unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image_URL__c</fullName>
    <description>Image displays on the event overview and registration pages.</description>
    <inlineHelpText>Image displays on the event overview and registration pages.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>