unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Individual_Pages__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Individual_Pages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked all status pages can be configured individually.</description>
    <inlineHelpText>When checked all status pages can be configured individually.</inlineHelpText>
    <label>Individual Pages</label>
    <type>Checkbox</type>
</CustomField>