unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Invitation_Only__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Invitation_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines an event as private, meaning only those invited to the event will be able to register for the event.</description>
    <inlineHelpText>When checked, the related event&#39;s attendees can only be registered by invitation.</inlineHelpText>
    <label>Private Event</label>
    <type>Checkbox</type>
</CustomField>