unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Event is available for Sale and for publishing too registration pages. Defaults checked.</description>
    <inlineHelpText>When checked, the Event is available for Sale and for publishing the registration pages. Defaults checked.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>