unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the event will be closed and no longer available for sale through the api and/or any community that has access to the event.</description>
    <inlineHelpText>When checked the event will be closed and no longer available for sale through the api and/or any community that has access to the event.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>