unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Event and related details will be exposed on all supported APIs. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Event and related details will be exposed on all supported APIs. Defaults unchecked.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>