unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Lightning_Event_Style__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Lightning_Event_Style__c</fullName>
    <description>Generated Styles for Lightning Events.</description>
    <inlineHelpText>Generated Styles for Lightning Events.</inlineHelpText>
    <label>SYSTEM</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>