unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Link_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Link_Color__c</fullName>
    <defaultValue>&quot;#FF9900&quot;</defaultValue>
    <description>Color of all text links in the related event. Valid hexadecimal notation required.</description>
    <inlineHelpText>Color of all text links in the related event. Valid hexadecimal notation required.</inlineHelpText>
    <label>Link Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>