unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Location_And_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Location_And_Date_Text__c</fullName>
    <description>The value defined in this field will display in the upper right hand side of the navbar overriding the city, state, and date/time.</description>
    <inlineHelpText>The value defined in this field will display in the upper right hand side of the navbar overriding the city, state, and date/time.</inlineHelpText>
    <label>Location and Date Text</label>
    <type>TextArea</type>
</CustomField>